--- a/templates/user.html
+++ b/templates/user.html
@@ -16,12 +16,11 @@ span {
 <form action=/register method=post>
 <table>
 <caption>ユーザー登録情報</caption>
-<tr><td>お名前<span>*</span></td><td>姓<input type=text class=name id=second>名<input type=text class=name id=first></td></tr>
-<tr><td>フリガナ<span>*</span></td><td>セイ<input type=text id=ruby id=second>メイ<input type=text class=ruby id=first></td></tr>
-<tr><td>生年月日<span>*</span></td><td><input type=date id=birth></td></tr>
-<tr><td>メールアドレス<span>*</span></td><td><input type=email id=email></td></tr>
-<tr><td>お客様住所</td><td><input type=text id=address></td></tr>
-<tr><td>パスワード<span>*</span></td><td><input type=password id=password></td></tr>
+<tr><td>お名前<span>*</span></td><td><input type=text name=name></td></tr>
+<tr><td>生年月日<span>*</span></td><td><input type=date name=birth></td></tr>
+<tr><td>メールアドレス<span>*</span></td><td><input type=email name=email></td></tr>
+<tr><td>お客様住所</td><td><input type=text name=address></td></tr>
+<tr><td>パスワード<span>*</span></td><td><input type=password name=password></td></tr>
 <tr><td>確認<span>*</span></td><td><input type=password></td></tr>
 <tr><td align=right><button id=ok>登録</button></td><td><button id=cancel>戻る</button></td></tr>
 </table>
