--- a/templates/cartitem.html
+++ b/templates/cartitem.html
@@ -7,22 +7,24 @@
 <script type=text/javascript>
 $(function(){
 	$('button#ok).on('click',function(){
-		
+		window.location = '/payment';
 	});
 	$('button#cancel).on('click',function(){
-	
+		window.location = '/main';
 	});
 });
 </script>
 <body>
 <p>ショッピングカート
 <table>
+{% set s = 0 %}
 {% for x in data %}
 <tr><td><img src={{x['url']}}></td><td>{{x['name']}}</td><td>{{x['count']}}</td>
 	<td>{{x['price']*x['count']}}</td><td><a href=/del?id=x['id']>削除</a></td></tr>
+{% set s += x['price'] %}
 {% end %}
 </table>
-<p>お支払金額（合計）{{x['price']}} +（消費税）{{x['price']*0.08}} = {{x['price']*1.08}}円
+<p>お支払金額（合計）{{s}} +（消費税）{{s*0.08}} = {{s*1.08}}円
 <button id=ok>決済画面</button><button id=cancel>戻る</button>
 </body>
 </html>
