--- a/templates/user.html
+++ b/templates/user.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>ユーザー登録</title>
 <script type=text/javascript src=http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js></script>
-<script type=text/javascript src={{static_url('js/user.js')}}></script>
 <style>
 span {
 	color:red;
@@ -22,7 +21,7 @@ span {
 <tr><td>お客様住所</td><td><input type=text name=address></td></tr>
 <tr><td>パスワード<span>*</span></td><td><input type=password name=password></td></tr>
 <tr><td>確認<span>*</span></td><td><input type=password></td></tr>
-<tr><td align=right><button id=ok>登録</button></td><td><button id=cancel>戻る</button></td></tr>
+<tr><td align=right><input type=submit>登録</td><td><button id=cancel onclick=window.location=/main)>戻る</button></td></tr>
 </table>
 </form>
 </body>
