--- a/templates/payment.html
+++ b/templates/payment.html
@@ -12,7 +12,7 @@
 <form action=/decide method=post>
 <table border=1>
 <tr><td><input type=radio name=post value=first checked>お届け先住所１</td><td><input type=radio name=post value=second>お届け先住所２</td></tr>
-<tr><td>{{address}}</td><td><input type=hidden name=address><span></span><button id=change>変更</button></td>
+<tr><td>{{id['address']}}</td><td><input type=hidden name=address><span></span><button id=change>変更</button></td>
 </table>
 お支払い方法
 <input type=submit value=支払い><input type=button value=キャンセル onclick=>
