--- a/templates/cartitem.html
+++ b/templates/cartitem.html
@@ -4,17 +4,6 @@
 <meta charset="UTF-8">
 <title>カートの中身</title>
 </head>
-<script type=text/javascript src=http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js></script>
-<script type=text/javascript>
-$(function(){
-	$('button#ok').on('click',function(){
-		window.location = '/payment';
-	});
-	$('button#cancel').on('click',function(){
-		window.location = '/main';
-	});
-});
-</script>
 <body>
 <p>ショッピングカート
 <table>
@@ -26,6 +15,6 @@ $(function(){
 {% end %}
 </table>
 <p>お支払金額（合計）{{s}} +（消費税）{{s*0.08}} = {{s*1.08}}円
-<button id=ok>決済画面</button><button id=cancel>戻る</button>
+<button onclick="location.href='/payment'">決済画面</button><button onclick="location.href='/main'">戻る</button>
 </body>
 </html>
