--- a/templates/payment.html
+++ b/templates/payment.html
@@ -15,7 +15,7 @@
 <tr><td>{{id['address']}}</td><td><input type=hidden name=address><span></span><button id=change>変更</button></td>
 </table>
 お支払い方法
-<input type=submit value=支払い><input type=button value=キャンセル onclick=>
+<input type=submit value=支払い><input type=button value=キャンセル onclick="location.href='/main'">
 </form>
 </body>
 </html>
