--- a/templates/user.html
+++ b/templates/user.html
@@ -21,7 +21,7 @@ span {
 <tr><td>お客様住所</td><td><input type=text name=address></td></tr>
 <tr><td>パスワード<span>*</span></td><td><input type=password name=password></td></tr>
 <tr><td>確認<span>*</span></td><td><input type=password></td></tr>
-<tr><td align=right><input type=submit value=登録></td><td><input type=button value=戻る onclick=window.location=/main)></td></tr>
+<tr><td align=right><input type=submit value=登録></td><td><input type=button value=戻る onclick="location.href='/main'"></td></tr>
 </table>
 </form>
 </body>
